--- a/UI/CSS/style.css
+++ b/UI/CSS/style.css
@@ -1,6 +1,6 @@
 /** Header **/
 header {
-  /* min-height: 5em; */
+  min-height: 5em;
   padding-left: 1em;
   background-color: #FAFAFB;
   border-bottom: 1.4px solid #bbc0c4;
@@ -38,16 +38,21 @@ header {
 
 header li {
   float: right;
-  padding: 0.5em;
+  padding-top: 0.5em;
   margin-right: 1em;
 }
 
 header li a {
-  color: black;
   text-decoration: none;
+  color: black;
   font-size: 1em;
   font-weight: regular;
-  /* border: 2px solid #D6D9DC; */
+  background-color: white;
+  border-radius: 3px;
+  border: 1px solid #848d95;
+  padding: 5px;
+  cursor: pointer;
+  margin-bottom: 1em;
 }
 
 header li a:hover {
@@ -97,25 +102,29 @@ aside {
   opacity: inherit;
 }
 
+/** header styling*/
 .h-content {
   display: grid;
   grid-gap: 2px;
   grid-template: repeat(1, 80px) / repeat(12, 1fr);
-  border: 2px solid #D6D9DC;
+  border: 2px solid rgb(228, 231, 235);
   background-color: white;
   border-radius: 4px;
   margin: 3em 5em 0.5em 5em; 
 }
 
+
+/* Body of the page for landing page*/
 .content-container {
   display: grid;
   grid-gap: 2px;
-  grid-template: repeat(1,40px) / repeat(12, 1fr);
+  grid-template: repeat(1,1fr) / repeat(12, 1fr);
   border: 0.5px solid #D6D9DC;
   background-color: white;
   border-radius: 3px;
   border-bottom: 0.5px solid grey;
   margin: 0 5em 0 5em;
+  padding-bottom: 0.1em;
 }
 
 #content-header {
@@ -146,7 +155,7 @@ aside {
   padding-top: 1em;
   margin: 0 3px 0 0;
   font-size:18px;
-  color: #848d95;
+  color: #595b5e;
 }
 
 .answers {
@@ -155,7 +164,7 @@ aside {
   padding-top: 1em;
   margin: 0 3px 0 0;
   font-size:18px;
-  color: #848d95;
+  color: #595b5e;
 }
 
 .ques-details {
@@ -190,7 +199,116 @@ aside {
   vertical-align: baseline;
 }
 
+/*forms*/
+#login-header {
+  width: 55%;
+  margin: 2em 15em 1em 18em;
+  justify-content: baseline;
+  text-align: center;
+  border: 2px solid rgb(228, 231, 235);
+  background-color: white;
+  border-radius: 4px;
+}
+
+.form-field {
+  display: grid;
+  grid-gap: 2px;
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+}
+
+.label-username {
+  grid-column: 1 / 2;
+  border: 1px solid grey;
+}
+
+.in-username {
+  grid-column: 2 / -1;
+  border: 1px solid grey;
+}
+
+.label-email {
+  grid-column: 1 / 2;
+  border: 1px solid grey;
+}
+
+.in-email {
+  grid-column: 2 / -1;
+  border: 1px solid grey;
+}
+
+.label-password {
+  grid-column: 1 / 2;
+  border: 1px solid grey;
+}
+
+.in-password {
+  grid-column: 2 / -1;
+  border: 1px solid grey;
+}
+
+.btn-login {
+  grid-column: 2 / 3;
+}
+
+.form-field input {
+  margin: 1em 12em 1em 0;
+  width: 263px;
+  line-height: 1.3;
+  font-size: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  height: 18px;
+  border: 2px solid white;
+  border-radius: 5px;
+}
+
+.form-field label {
+  font-weight: bold;
+  line-height: 70px;
+  font-size: 100%;
+}
+
+.form-content form {
+  width: 55%;
+  margin: 0 15em 0 18em;
+  text-align: center;
+  background-color: white;
+  border-radius: 4px;
+  /* border: 0.5px solid grey; */
+}
+
+.btn-login button {
+  font: bold 13px Nunito, Helvetica, Arial, sans-serif;
+  background-color: #4700cc;
+  padding: 12px;
+  margin-top: 15px;
+  justify-items: auto;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.formtext {
+  padding: 20px;
+  width: 50%;
+  margin: 0 auto 6em auto;
+}
+
+.formtext a {
+  text-decoration: none;
+}
+
 /**Footer*/
+#login-footer{
+  padding: 3px;
+  margin-top: 5%;
+  color: #848d95;
+  background-color: #242729;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
 footer {
   padding: 3px;
   margin-top: 5%;
