--- a/UI/CSS/style.css
+++ b/UI/CSS/style.css
@@ -361,10 +361,64 @@ aside {
   grid-column: 2 / -1;
   border-radius: 5px;
   background-color: #848d95;
+  width: 80%;
+  height: 45%;
 }
 
-.how-to p , h3{
+.how-to p {
   margin: 1em;
+}
+
+#ans-container {
+  display: grid;
+  grid-gap: 2px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: 60px 1fr 20px 1fr;
+  width: 60%;
+  border: 0.5px solid #D6D9DC;
+  background-color: white;
+  border-radius: 3px;
+  border-bottom: 0.5px solid grey;
+  min-height: 50%;;
+  margin: 2em 1em 2em 14.5em;
+  padding: 1em;
+}
+
+.ans-header a{
+  text-decoration: none;
+}
+
+#ans-container h3 {
+  margin: 0;
+  padding: 0;
+  border-bottom: 1.4px solid #bbc0c4;
+}
+section .ans-votes-container {
+  display: grid;
+  grid-gap: 2px;
+  grid-template-columns: 40px 1fr;
+  border-bottom: 1.4px solid #bbc0c4;
+}
+
+.post-text {
+  /* border-bottom: 1.4px solid #bbc0c4;   */
+  margin-left: 1em;  
+  justify-content: left;
+}
+
+.ans-votes {
+  padding-top: 0.49em;
+  margin: 0 3px 0 0;
+  font-size:18px;
+  color: #595b5e;
+}
+
+.ans-votes span {
+  margin-left: 0.7em;
+}
+
+.ans-body {
+  margin: 0.5em;
 }
 
 /**Footer*/
