--- a/UI/CSS/style.css
+++ b/UI/CSS/style.css
@@ -218,7 +218,10 @@ aside {
 .form-field {
   display: grid;
   grid-gap: 2px;
-  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-template-columns: 150px 1fr;
+  padding-top: 1em;
+  margin: 0 6em;
 }
 
 .label-username {
@@ -253,6 +256,7 @@ aside {
 
 .btn-login {
   grid-column: 2 / 3;
+  margin-left: 10em;
 }
 
 .form-field input {
@@ -469,13 +473,19 @@ section .ans-votes-container {
   font: bold 13px Nunito, Helvetica, Arial, sans-serif;
   background-color: #4700cc;
   padding: 1em;
-  margin: 15px;
+  margin: 1em 0 0.5em 4em;
   border: none;
   border-radius: 10px;
   cursor: pointer;
 }
 
+#Questions h4 {
+  margin-left: 4em;
+}
 
+#Questions a {
+  text-decoration: none;
+}
 /**Footer*/
 #login-footer{
   padding: 3px;
