feat(consume sigup api): implement signup from the front-end page - add static page to express - add UI file path to express - use fetch to consume signup api - display proper message
[Finishes #160617340]

--- a/UI/CSS/basic.css
+++ b/UI/CSS/basic.css
@@ -13,9 +13,13 @@ ul {
   list-style: none;
 }
 
-*:focus {
+.in-details:focus {
   outline: none;
 }
+
+/* html {
+  overflow: hidden;
+} */
 
 /* * {
   background: #000 !important;
