feat(get single question): Fetch a single question with their respective answers
- fetch a question with its answers
- refactor UI
- refactor file path to serve correct static files

[Finishes #160864294]

--- a/UI/CSS/style.css
+++ b/UI/CSS/style.css
@@ -344,6 +344,9 @@ header #btn-search:hover {
   border-radius: 10px;
   cursor: pointer;
 }
+#question-header {
+  margin: 1em;
+}
 
 #ques-header {
   margin-bottom: 1em;
@@ -383,13 +386,23 @@ header #btn-search:hover {
   color: #604017;
 }
 
+.user-tag {
+  float: right;
+  margin-right: 1.5em; 
+  color: grey;
+}
+
+#textarea {
+  resize: none;
+}
+
 
 /*** Answering questions*/
 #ans-container {
   display: grid;
   grid-gap: 2px;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: 60px 1fr 20px 1fr;
+  /* grid-template-rows: 60px 1fr 20px 1fr; */
   width: 60%;
   border: 0.5px solid #D6D9DC;
   background-color: white;
@@ -422,7 +435,6 @@ section .ans-votes-container {
 }
 
 .post-text {
-  /* border-bottom: 1.4px solid #bbc0c4;   */
   margin-left: 1em;  
   justify-content: center; 
 }
